@@ -288,6 +288,9 @@ ILboolean ilIsValidLifL(const void *Lump, ILuint Size);
 ILboolean ilLoadLif(ILconst_string FileName);
 ILboolean ilLoadLifF(ILHANDLE File);
 ILboolean ilLoadLifL(const void *Lump, ILuint Size);
+ILboolean ilIsValidMdl(ILconst_string FileName);
+ILboolean ilIsValidMdlF(ILHANDLE File);
+ILboolean ilIsValidMdlL(const void *Lump, ILuint Size);
 ILboolean ilLoadMdl(ILconst_string FileName);
 ILboolean ilLoadMdlF(ILHANDLE File);
 ILboolean ilLoadMdlL(const void *Lump, ILuint Size);
